--- a/pageCSS.css
+++ b/pageCSS.css
@@ -1,11 +1,23 @@
-#button1{
-    width: 300px;
-    height: 600px;
+#rnd{
+    padding: 20px;
+    border-radius: 25px;
 }
-#button2{
-    width: 300px;
-    height: 600px;
+#cir{
+    border-radius: 50%;
+}
+.btnSpace{
+	margin-right: 5px;
 }
 #container{
     text-align: center;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 10%;
+  background-color: black;
+  color: white;
+  text-align: center;
 }
